--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section id="about" class="about">
         <h2>Обо мне</h2>
-        <p>Студент 2 курса. Изучаю Python, Flask, HTML, CSS, JS. Создаю игры и веб-приложения.</p>
+        <p>Студент 2 курса. Изучаю Python, Flask, HTML, CSS, JS. Создаю игры, базы данных на SQL, веб-приложения.</p>
         <h3>Навыки:</h3>
         <ul>
             <li>Python</li>
@@ -34,6 +34,7 @@
             <li>Flask</li>
             <li>HTML/CSS/JS</li>
             <li>Canvas API</li>
+            <li>SQL</li>
         </ul>
     </section>
 
@@ -53,8 +54,8 @@
 
     <section id="contact" class="contact">
         <h2>Контакты</h2>
-        <p>Email: your-email@example.com</p>
-        <p>Telegram: @your_username</p>
+        <p>Email: alexandr.1742005@gmail.com</p>
+        <p>Telegram: @styssie</p>
     </section>
 
     <footer>
