--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Александр — Разработчик игр</title>
+    <title>Александр — Разработчик игр и приложений под заказ</title>
+    <meta name="description" content="Создаю игры и приложения под заказ. Python, Flask, HTML, CSS, JS. Быстро, качественно, надёжно.">
+    <meta name="keywords" content="Python, Flask, игры, приложения, разработка, заказ, змейка, PWA, SQL">
+    <meta name="author" content="Александр">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="hero">
         <div class="hero-content">
-            <h1>Привет! Я Александр</h1>
-            <p>Разработчик игр и приложений</p>
+            <h1>Создаю игры и приложения под заказ</h1>
+            <p>Python, Flask, HTML, CSS, JS. Быстро, качественно, надёжно.</p>
         </div>
     </header>
 
