--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Александр — Разработчик игр и приложений под заказ</title>
-    <meta name="description" content="Создаю игры и приложения под заказ. Python, Flask, HTML, CSS, JS. Быстро, качественно, надёжно.">
-    <meta name="keywords" content="Python, Flask, игры, приложения, разработка, заказ, змейка, PWA, SQL">
+    <meta name="description" content="Styssie.developer. Python, Flask, HTML, CSS, JS.">
+    <meta name="keywords" content="Python, Flask, игры, приложения, разработка, PWA, SQL">
     <meta name="author" content="Александр">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -66,3 +66,4 @@
     </footer>
 </body>
 </html>
+
