--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="hero">
-        <div class="hero-content">
+    <!-- Главный блок с двумя колонками -->
+    <section class="hero-section">
+        <!-- Левая колонка: текст -->
+        <div class="hero-text">
             <h1>Styssie.developer</h1>
             <p>Python, Flask, HTML, CSS, JS.</p>
         </div>
-    </header>
 
-    <!-- ✅ Навигация здесь -->
+        <!-- Правая колонка: изображение -->
+        <div class="hero-image">
+            <img src="https://i.imgur.com/7KQ3XzE.jpg" alt="Кодинг на ноутбуке">
+        </div>
+    </section>
+
+    <!-- Навигация -->
     <nav style="text-align: center; margin: 1rem 0;">
         <a href="about.html" style="margin: 0 1rem; color: white; text-decoration: none;">Обо мне</a>
         <a href="projects.html" style="margin: 0 1rem; color: white; text-decoration: none;">Проекты</a>
@@ -56,7 +63,7 @@
             <div class="card">
                 <h2>Контакты</h2>
                 <p>Email: alexandr.1742005@gmail.com</p>
-                <p>Telegram: <a href="https://t.me/styssie">@styssie</a></p> <!-- Убрал лишние пробелы -->
+                <p>Telegram: <a href="https://t.me/styssie">@styssie</a></p>
             </div>
         </section>
     </main>
