--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <!-- Правая колонка: изображение -->
         <div class="hero-image">
-            <img src="https://coding.jpg" alt="Кодинг на ноутбуке">
+            <img src="images/coding.jpg" alt="Кодинг на ноутбуке">
         </div>
     </section>
 
@@ -73,4 +73,5 @@
     </footer>
 </body>
 </html>
+
 
