--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <!-- Правая колонка: изображение -->
         <div class="hero-image">
-            <img src="images/coding.jpg" alt="Кодинг на ноутбуке">
+            <img src="images/coding-laptop.jpg" alt="Кодинг на ноутбуке">
         </div>
     </section>
 
@@ -33,19 +33,25 @@
 
     <main>
         <section class="container">
+            <!-- Карточка "Обо мне" -->
             <div class="card">
-                <h2>Обо мне</h2>
-                <p>Студент 2 курса. Изучаю Python, Flask, HTML, CSS, JS. Создаю игры, базы данных на SQL, веб-приложения.</p>
-                <h3>Навыки:</h3>
-                <ul>
-                    <li>Python</li>
-                    <li>SQL</li>
-                    <li>Flask</li>
-                    <li>HTML/CSS/JS</li>
-                    <li>Canvas API</li>
-                </ul>
+                <div class="about-section">
+                    <h2>Обо мне</h2>
+                    <div class="about-content">
+                        <p>Студент 2 курса. Изучаю Python, Flask, HTML, CSS, JS. Создаю игры, базы данных на SQL, веб-приложения.</p>
+                        <h3>Навыки:</h3>
+                        <ul>
+                            <li>Python</li>
+                            <li>SQL</li>
+                            <li>Flask</li>
+                            <li>HTML/CSS/JS</li>
+                            <li>Canvas API</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
 
+            <!-- Карточка "Мои проекты" -->
             <div class="card">
                 <h2>Мои проекты</h2>
                 <div class="project-item">
@@ -60,6 +66,7 @@
                 </div>
             </div>
 
+            <!-- Карточка "Контакты" -->
             <div class="card">
                 <h2>Контакты</h2>
                 <p>Email: alexandr.1742005@gmail.com</p>
@@ -73,5 +80,3 @@
     </footer>
 </body>
 </html>
-
-
