--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <!-- Правая колонка: изображение -->
         <div class="hero-image">
-            <img src="images/coding.jpg" alt="Кодинг на ноутбуке">
+            <img src="images/coding-laptop.jpg" alt="Кодинг на ноутбуке">
         </div>
     </section>
 
@@ -55,24 +55,32 @@
 
             <!-- Карточка "Мои проекты" -->
             <div class="card">
-                <h2>Мои проекты</h2>
-                <div class="project-item">
-                    <h3>Змейка Styssie Game</h3>
-                    <p>Классическая змейка с квестами, скинами и таблицей лидеров</p>
-                    <a href="./snake-game">Играть в змейку</a>
-                </div>
-                <div class="project-item">
-                    <h3>PWA Приложение</h3>
-                    <p>Мобильная версия змейки</p>
-                    <a href="#">Смотреть</a>
+                <div class="projects-section">
+                    <h2>Мои проекты</h2>
+                    <div class="projects-content">
+                        <div class="project-item">
+                            <h3>Змейка Styssie Game</h3>
+                            <p>Классическая змейка с квестами, скинами и таблицей лидеров</p>
+                            <a href="./snake-game">Играть в змейку</a>
+                        </div>
+                        <div class="project-item">
+                            <h3>PWA Приложение</h3>
+                            <p>Мобильная версия змейки</p>
+                            <a href="#">Смотреть</a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
             <!-- Карточка "Контакты" -->
             <div class="card">
-                <h2>Контакты</h2>
-                <p>Email: alexandr.1742005@gmail.com</p>
-                <p>Telegram: <a href="https://t.me/styssie">@styssie</a></p>
+                <div class="contacts-section">
+                    <h2>Контакты</h2>
+                    <div class="contacts-content">
+                        <p>Email: alexandr.1742005@gmail.com</p>
+                        <p>Telegram: <a href="https://t.me/styssie">@styssie</a></p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
