--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <!-- Карточка "Обо мне" -->
             <div class="card">
                 <div class="about-section">
-                    <h2>Обо мне</h2>
+                    <h2><span class="typewriter">Обо мне</span></h2>
                     <div class="about-content">
                         <p><strong>Опыт работы</strong><br>
                         На данный момент совмещаю обучение в университете с интенсивной проектной практикой. В рамках разработки полноценного приложения создал с нуля аркадную игру «Snake», реализовав весь цикл — от проектирования и написания кода до тестирования и релиза. Этот опыт позволил углубить понимание принципов объектно-ориентированного программирования, логики игровых механик и управления проектом.<br><br>
@@ -56,7 +56,7 @@
             <!-- Карточка "Мои проекты" -->
             <div class="card">
                 <div class="projects-section">
-                    <h2>Мои проекты</h2>
+                    <h2><span class="typewriter">Мои проекты</span></h2>
                     <div class="projects-content">
                         <div class="project-item">
                             <h3>Змейка Styssie Game</h3>
@@ -75,7 +75,7 @@
             <!-- Карточка "Контакты" -->
             <div class="card">
                 <div class="contacts-section">
-                    <h2>Контакты</h2>
+                    <h2><span class="typewriter">Контакты</span></h2>
                     <div class="contacts-content">
                         <p>Email: alexandr.1742005@gmail.com</p>
                         <p>Telegram: <a href="https://t.me/styssie">@styssie</a></p>
@@ -90,4 +90,3 @@
     </footer>
 </body>
 </html>
-
