--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 
     <!-- Навигация -->
     <nav style="text-align: center; margin: 1rem 0;">
-        <a href="about.html" style="margin: 0 1rem; color: white; text-decoration: none;">Обо мне</a>
-        <a href="projects.html" style="margin: 0 1rem; color: white; text-decoration: none;">Проекты</a>
-        <a href="contact.html" style="margin: 0 1rem; color: white; text-decoration: none;">Контакты</a>
-    </nav>
+    <a href="premium.html" style="margin: 0 1rem; color: white; text-decoration: none;">Главная</a>
+    <a href="about.html" style="margin: 0 1rem; color: white; text-decoration: none;">Обо мне</a>
+    <a href="projects.html" style="margin: 0 1rem; color: white; text-decoration: none;">Проекты</a>
+    <a href="contact.html" style="margin: 0 1rem; color: white; text-decoration: none;">Контакты</a>
+</nav>
 
     <main>
         <section class="container">
@@ -90,3 +91,4 @@
     </footer>
 </body>
 </html>
+
