--- a/projects.html
+++ b/projects.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Мои проекты — Styssie.developer</title>
-    <meta name="description" content="Проекты: Змейка Styssie Game, PWA Приложение. Python, Flask, HTML, CSS, JS.">
-    <meta name="keywords" content="Python, Flask, игры, приложения, разработка, PWA, SQL">
+    <meta name="description" content="Проекты: Змейка Styssie Game, PWA Приложение, Курсач по БД. Python, Flask, HTML, CSS, JS.">
+    <meta name="keywords" content="Python, Flask, игры, приложения, разработка, PWA, SQL, PostgreSQL">
     <meta name="author" content="Александр">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -20,12 +20,13 @@
 
         <!-- Правая колонка: изображение -->
         <div class="hero-image">
-            <img src="images/coding.jpg" alt="Кодинг на ноутбуке">
+            <img src="images/coding-laptop.jpg" alt="Кодинг на ноутбуке">
         </div>
     </section>
 
     <!-- Навигация -->
     <nav style="text-align: center; margin: 1rem 0;">
+        <a href="premium.html" style="margin: 0 1rem; color: white; text-decoration: none;">Главная</a>
         <a href="about.html" style="margin: 0 1rem; color: white; text-decoration: none;">Обо мне</a>
         <a href="projects.html" style="margin: 0 1rem; color: white; text-decoration: none;">Проекты</a>
         <a href="contact.html" style="margin: 0 1rem; color: white; text-decoration: none;">Контакты</a>
@@ -48,6 +49,12 @@
                             <p>Мобильная версия змейки</p>
                             <a href="#">Смотреть</a>
                         </div>
+                        <!-- Новый проект -->
+                        <div class="project-item">
+                            <h3>Курсач по Базам Данных</h3>
+                            <p>Сайт политической партии. Реализация базы данных на PostgreSQL.</p>
+                            <a href="курсовая работа.pdf" target="_blank">Смотреть курсач</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -57,10 +64,10 @@
     <footer>
         <p>&copy; 2026 Александр. Все права защищены.</p>
     </footer>
-<!-- Кнопка "Вернуться на главную" -->
+
+    <!-- Кнопка "Вернуться на главную" -->
     <div style="text-align: center; margin-top: 2rem;">
         <a href="premium.html" style="color: #667eea; text-decoration: none; font-weight: bold; font-size: 1.2rem;">← Вернуться на главную</a>
     </div>
 </body>
 </html>
-
