--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Александр — Разработчик игр и приложений под заказ</title>
-    <meta name="description" content="Styssie.developer. Python, Flask, HTML, CSS, JS.">
-    <meta name="keywords" content="Python, Flask, игры, приложения, разработка, PWA, SQL">
-    <meta name="author" content="Александр">
+    <title>Styssie.developer — Портфолио</title>
+    <meta name="description" content="Создаю игры и приложения под заказ. Python, Flask, HTML, CSS, JS.">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,20 +18,18 @@
 
         <!-- Правая колонка: изображение -->
         <div class="hero-image">
-            <img src="images/coding.jpg" alt="Кодинг на ноутбуке">
+            <img src="images/coding-laptop.jpg" alt="Кодинг на ноутбуке">
         </div>
     </section>
 
     <!-- Навигация -->
     <nav style="text-align: center; margin: 1rem 0;">
-    <a href="about.html" style="margin: 0 1rem; color: white; text-decoration: none;">Обо мне</a>
-    <a href="projects.html" style="margin: 0 1rem; color: white; text-decoration: none;">Проекты</a>
-    <a href="contact.html" style="margin: 0 1rem; color: white; text-decoration: none;">Контакты</a>
-</nav>
-<div style="text-align: center; margin-top: 2rem;">
-    <a href="premium.html" style="color: #667eea; text-decoration: none; font-weight: bold; font-size: 1.2rem;">← Вернуться на главную</a>
-</div>
-    
+        <a href="index.html" style="margin: 0 1rem; color: white; text-decoration: none;">Главная</a>
+        <a href="about.html" style="margin: 0 1rem; color: white; text-decoration: none;">Обо мне</a>
+        <a href="projects.html" style="margin: 0 1rem; color: white; text-decoration: none;">Проекты</a>
+        <a href="contact.html" style="margin: 0 1rem; color: white; text-decoration: none;">Контакты</a>
+    </nav>
+
     <main>
         <section class="container">
             <!-- Карточка "Обо мне" -->
@@ -71,6 +67,17 @@
                             <p>Мобильная версия змейки</p>
                             <a href="#">Смотреть</a>
                         </div>
+                        <!-- Новый проект -->
+                        <div class="project-item">
+                            <h3>Курсач по Базам Данных</h3>
+                            <p>Разработка базы данных для веб-платформы. PostgreSQL, триггеры, хранимые процедуры.</p>
+                            <a href="coursework-db.pdf" target="_blank">Смотреть курсач</a>
+                        </div>
+                        <div class="project-item">
+                            <h3>SQL-код из курсача</h3>
+                            <p>Создание таблиц, триггеры, хранимые процедуры.</p>
+                            <a href="sql-code.html">Посмотреть код</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -93,6 +100,3 @@
     </footer>
 </body>
 </html>
-
-
-
