--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <!-- Правая колонка: изображение -->
         <div class="hero-image">
-            <img src="images/coding-laptop.jpg" alt="Кодинг на ноутбуке">
+            <img src="images/coding.jpg" alt="Кодинг на ноутбуке">
         </div>
     </section>
 
@@ -71,12 +71,7 @@
                         <div class="project-item">
                             <h3>Курсач по Базам Данных</h3>
                             <p>Разработка базы данных для веб-платформы. PostgreSQL, триггеры, хранимые процедуры.</p>
-                            <a href="coursework-db.pdf" target="_blank">Смотреть курсач</a>
-                        </div>
-                        <div class="project-item">
-                            <h3>SQL-код из курсача</h3>
-                            <p>Создание таблиц, триггеры, хранимые процедуры.</p>
-                            <a href="sql-code.html">Посмотреть код</a>
+                            <a href="SQL.work.pdf" target="_blank">Смотреть курсач</a>
                         </div>
                     </div>
                 </div>
@@ -100,3 +95,4 @@
     </footer>
 </body>
 </html>
+
