--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <div class="project-item">
                             <h3>Курсач по Базам Данных</h3>
                             <p>Разработка базы данных для веб-платформы. PostgreSQL, триггеры, хранимые процедуры.</p>
-                            <a href="SQL.work.pdf" target="_blank">Смотреть курсач</a>
+                            <a href="sql_work.pdf" target="_blank">Смотреть работу</a>
                         </div>
                     </div>
                 </div>
@@ -95,4 +95,5 @@
     </footer>
 </body>
 </html>
+
 
