--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Контакты — Styssie.developer</title>
-    <meta name="description" content="Контакты: Email, Telegram. Python, Flask, HTML, CSS, JS.">
-    <meta name="keywords" content="Python, Flask, игры, приложения, разработка, PWA, SQL">
-    <meta name="author" content="Александр">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,10 +23,10 @@
 
     <!-- Навигация -->
     <nav style="text-align: center; margin: 1rem 0;">
+        <a href="index.html" style="margin: 0 1rem; color: white; text-decoration: none;">Главная</a>
         <a href="about.html" style="margin: 0 1rem; color: white; text-decoration: none;">Обо мне</a>
         <a href="projects.html" style="margin: 0 1rem; color: white; text-decoration: none;">Проекты</a>
         <a href="contact.html" style="margin: 0 1rem; color: white; text-decoration: none;">Контакты</a>
-        <a href="index.html" style="margin: 0 1rem; color: white; text-decoration: none;">Главная</a>
     </nav>
 
     <main>
@@ -41,6 +38,7 @@
                     <div class="contacts-content">
                         <p>Email: alexandr.1742005@gmail.com</p>
                         <p>Telegram: <a href="https://t.me/styssie">@styssie</a></p>
+                        <p>GitHub: <a href="https://github.com/alexandr1742005-ai" target="_blank">alexandr1742005-ai</a></p>
                     </div>
                 </div>
             </div>
@@ -50,8 +48,10 @@
     <footer>
         <p>&copy; 2026 Александр. Все права защищены.</p>
     </footer>
+
+    <!-- Кнопка "Вернуться на главную" -->
+    <div style="text-align: center; margin-top: 2rem;">
+        <a href="index.html" style="color: #667eea; text-decoration: none; font-weight: bold; font-size: 1.2rem;">← Вернуться на главную</a>
+    </div>
 </body>
 </html>
-
-
-
