--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
         <section class="container">
             <!-- Карточка "Обо мне" -->
-            <div class="card">
+            <div class="card slide-in">
                 <div class="about-section">
                     <h2><span class="typewriter">Обо мне</span></h2>
                     <div class="about-content">
@@ -53,7 +53,7 @@
             </div>
 
             <!-- Карточка "Мои проекты" -->
-            <div class="card">
+           <div class="card slide-in">
                 <div class="projects-section">
                     <h2><span class="typewriter">Мои проекты</span></h2>
                     <div class="projects-content">
@@ -78,13 +78,13 @@
             </div>
 
            <!-- Карточка "Контакты" -->
-<div class="card">
-    <div class="contacts-section">
-        <h2><span class="typewriter">Контакты</span></h2>
-        <div class="contacts-content">
-            <p>Email: alexandr.1742005@gmail.com</p>
+        <div class="card slide-in">
+              <div class="contacts-section">
+                <h2><span class="typewriter">Контакты</span></h2>
+               <div class="contacts-content">
+              <p>Email: alexandr.1742005@gmail.com</p>
             <p>Telegram: <a href="https://t.me/styssie">@styssie</a></p>
-            <p>GitHub: <a href="https://github.com/alexandr1742005-ai" target="_blank">alexandr1742005-ai</a></p>
+          <p>GitHub: <a href="https://github.com/alexandr1742005-ai" target="_blank">alexandr1742005-ai</a></p>
         </div>
     </div>
 </div>
@@ -96,6 +96,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
