--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <main>
         <section class="container">
             <!-- Карточка "Обо мне" -->
-            <div class="card">
+            <div class="card slide-in">
                 <div class="about-section">
                     <h2><span class="typewriter">Обо мне</span></h2>
                     <div class="about-content">
@@ -46,6 +46,7 @@
 
 </body>
 </html>
+
 
 
 
