--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <!-- Правая колонка: изображение -->
         <div class="hero-image">
-            <img src="images/coding.jpg" alt="Кодинг на ноутбуке">
+            <img src="images/coding-laptop.jpg" alt="Кодинг на ноутбуке">
         </div>
     </section>
 
@@ -32,74 +32,88 @@
 
     <main>
         <section class="container">
-            <!-- Карточка "Обо мне" -->
-            <div class="card slide-in">
-                <div class="about-section">
-                    <h2><span class="typewriter">Обо мне</span></h2>
-                    <div class="about-content">
-                        <p><strong>Опыт работы</strong><br>
-                        На данный момент совмещаю обучение в университете с интенсивной проектной практикой. В рамках разработки полноценного приложения создал с нуля аркадную игру «Snake», реализовав весь цикл — от проектирования и написания кода до тестирования и релиза. Этот опыт позволил углубить понимание принципов объектно-ориентированного программирования, логики игровых механик и управления проектом.<br><br>
-                        <strong>Личные качества</strong><br>
-                        Ответственность и нацеленность на результат: способен доводить задачи до завершения в установленные сроки.<br>
-                        Коммуникабельность и командная работа: готов к конструктивному диалогу, умею ясно доносить идеи и учитывать обратную связь.<br>
-                        Стрессоустойчивость и адаптивность: сохраняю работоспособность в условиях сжатых сроков и быстро осваиваю новые инструменты.<br>
-                        Высокая обучаемость: активно самостоятельно изучаю технологии и методики, применяя их в практике.<br><br>
-                        <strong>Профессиональные навыки</strong><br>
-                        Языки и технологии: Python, SQL (базы данных), Flask (бэкенд-разработка), HTML/CSS/JavaScript (фронтенд).<br>
-                        Инструменты и платформы: Git / GitHub (ведение репозиториев, контроль версий, командная разработка).<br>
-                        Специализированные API: опыт работы с Canvas API для реализации графики и анимации в браузере.</p>
+            <!-- Сетка из трёх колонок -->
+            <div class="three-column-grid">
+                <!-- Карточка "Обо мне" -->
+                <div class="card smooth-fade cascade-delay-1">
+                    <div class="about-section">
+                        <h2><span class="typewriter">Обо мне</span></h2>
+                        <div class="about-content">
+                            <p>Python, SQL, Flask, HTML/CSS/JS. Создаю игры и веб-приложения. Опыт в разработке проектов и работе с базами данных.</p>
+                            <p><a href="about.html">Подробнее →</a></p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Карточка "Мои проекты" -->
+                <div class="card smooth-fade cascade-delay-2">
+                    <div class="projects-section">
+                        <h2><span class="typewriter">Мои проекты</span></h2>
+                        <div class="projects-content">
+                            <div class="project-item">
+                                <h3>Змейка Styssie Game</h3>
+                                <p>Классическая змейка с квестами, скинами и таблицей лидеров</p>
+                                <a href="./snake-game">Играть в змейку</a>
+                            </div>
+                            <div class="project-item">
+                                <h3>PWA Приложение</h3>
+                                <p>Мобильная версия змейки</p>
+                                <a href="#">Смотреть</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Карточка "Контакты" -->
+                <div class="card smooth-fade cascade-delay-3">
+                    <div class="contacts-section">
+                        <h2><span class="typewriter">Контакты</span></h2>
+                        <div class="contacts-content">
+                            <p>Email: alexandr.1742005@gmail.com</p>
+                            <p>Telegram: <a href="https://t.me/styssie">@styssie</a></p>
+                            <p>GitHub: <a href="https://github.com/alexandr1742005-ai" target="_blank">alexandr1742005-ai</a></p>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Карточка "Мои проекты" -->
-           <div class="card slide-in">
-                <div class="projects-section">
-                    <h2><span class="typewriter">Мои проекты</span></h2>
-                    <div class="projects-content">
-                        <div class="project-item">
-                            <h3>Змейка Styssie Game</h3>
-                            <p>Классическая змейка с квестами, скинами и таблицей лидеров</p>
-                            <a href="./snake-game">Играть в змейку</a>
-                        </div>
-                        <div class="project-item">
-                            <h3>PWA Приложение</h3>
-                            <p>Мобильная версия змейки</p>
-                            <a href="#">Смотреть</a>
-                        </div>
-                        <!-- Новый проект -->
-                        <div class="project-item">
-                            <h3>Проект с использованием SQL</h3>
-                            <p>Разработка базы данных для веб-платформы. PostgreSQL, триггеры, хранимые процедуры.</p>
-                            <a href="https://docs.google.com/document/d/1HZj1IVr1gqsJB2Q5z3d-FxUgu9BLhZEp/edit?usp=sharing&ouid=102333938774137555975&rtpof=true&sd=true" target="_blank">Смотреть работу</a>
-                        </div>
-                    </div>
+            <!-- Дополнительные блоки -->
+            <div class="three-column-grid">
+                <!-- Карточка "Навыки" -->
+                <div class="card smooth-fade cascade-delay-4">
+                    <h2>Мои навыки</h2>
+                    <ul>
+                        <li>Python</li>
+                        <li>SQL</li>
+                        <li>Flask</li>
+                        <li>HTML/CSS</li>
+                        <li>JavaScript</li>
+                        <li>Git / GitHub</li>
+                        <li>Canvas API</li>
+                    </ul>
+                </div>
+
+                <!-- Карточка "Опыт" -->
+                <div class="card smooth-fade cascade-delay-5">
+                    <h2>Опыт</h2>
+                    <p>Создание игр, веб-приложений, работа с базами данных, проектная практика в университете.</p>
+                </div>
+
+                <!-- Карточка "Статистика" -->
+                <div class="card smooth-fade cascade-delay-6">
+                    <h2>Статистика</h2>
+                    <p>GitHub: 50+ коммитов</p>
+                    <p>Проекты: 5+</p>
+                    <p>Языки: Python, SQL, JS...</p>
                 </div>
             </div>
-
-           <!-- Карточка "Контакты" -->
-        <div class="card slide-in">
-              <div class="contacts-section">
-                <h2><span class="typewriter">Контакты</span></h2>
-               <div class="contacts-content">
-              <p>Email: alexandr.1742005@gmail.com</p>
-            <p>Telegram: <a href="https://t.me/styssie">@styssie</a></p>
-          <p>GitHub: <a href="https://github.com/alexandr1742005-ai" target="_blank">alexandr1742005-ai</a></p>
-        </div>
-    </div>
-</div>
         </section>
     </main>
 
     <footer>
         <p>&copy; 2026 Александр. Все права защищены.</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
