--- a/index.html
+++ b/index.html
@@ -34,16 +34,26 @@
         <section class="container">
             <!-- Сетка из трёх колонок -->
             <div class="main-grid">
-    <!-- Блок "Обо мне" — занимает всю высоту -->
-    <div class="card smooth-fade cascade-delay-1" style="grid-row: span 2;">
-        <div class="about-section">
-            <h2><span class="typewriter">Обо мне</span></h2>
-            <div class="about-content">
-                <p>Python, SQL, Flask, HTML/CSS/JS. Создаю игры и веб-приложения. Опыт в разработке проектов и работе с базами данных.</p>
-                <p><a href="about.html">Подробнее →</a></p>
-            </div>
+   <!-- Блок "Обо мне" — занимает всю высоту -->
+<div class="card smooth-fade cascade-delay-1" style="grid-row: span 2;">
+    <div class="about-section">
+        <h2><span class="typewriter">Обо мне</span></h2>
+        <div class="about-content">
+            <p><strong>Опыт работы</strong><br>
+            На данный момент совмещаю обучение в университете с интенсивной проектной практикой. В рамках разработки полноценного приложения создал с нуля аркадную игру «Snake», реализовав весь цикл — от проектирования и написания кода до тестирования и релиза. Этот опыт позволил углубить понимание принципов объектно-ориентированного программирования, логики игровых механик и управления проектом.<br><br>
+            <strong>Личные качества</strong><br>
+            Ответственность и нацеленность на результат: способен доводить задачи до завершения в установленные сроки.<br>
+            Коммуникабельность и командная работа: готов к конструктивному диалогу, умею ясно доносить идеи и учитывать обратную связь.<br>
+            Стрессоустойчивость и адаптивность: сохраняю работоспособность в условиях сжатых сроков и быстро осваиваю новые инструменты.<br>
+            Высокая обучаемость: активно самостоятельно изучаю технологии и методики, применяя их в практике.<br><br>
+            <strong>Профессиональные навыки</strong><br>
+            Языки и технологии: Python, SQL (базы данных), Flask (бэкенд-разработка), HTML/CSS/JavaScript (фронтенд).<br>
+            Инструменты и платформы: Git / GitHub (ведение репозиториев, контроль версий, командная разработка).<br>
+            Специализированные API: опыт работы с Canvas API для реализации графики и анимации в браузере.</p>
+            <p><a href="about.html">Подробнее →</a></p>
         </div>
     </div>
+</div>
 
     <!-- Блок "Мои проекты" -->
     <div class="card smooth-fade cascade-delay-2">
@@ -115,5 +125,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
