--- a/index.html
+++ b/index.html
@@ -32,87 +32,80 @@
 
     <main>
         <section class="container">
-            <!-- Сетка из трёх колонок -->
+            <!-- Сетка 2x2 -->
             <div class="main-grid">
-   <!-- Блок "Обо мне" — занимает всю высоту -->
-<div class="card smooth-fade cascade-delay-1" style="grid-row: span 2;">
-    <div class="about-section">
-        <h2><span class="typewriter">Обо мне</span></h2>
-        <div class="about-content">
-            <p><strong>Опыт работы</strong><br>
-            На данный момент совмещаю обучение в университете с интенсивной проектной практикой. В рамках разработки полноценного приложения создал с нуля аркадную игру «Snake», реализовав весь цикл — от проектирования и написания кода до тестирования и релиза. Этот опыт позволил углубить понимание принципов объектно-ориентированного программирования, логики игровых механик и управления проектом.<br><br>
-            <strong>Личные качества</strong><br>
-            Ответственность и нацеленность на результат: способен доводить задачи до завершения в установленные сроки.<br>
-            Коммуникабельность и командная работа: готов к конструктивному диалогу, умею ясно доносить идеи и учитывать обратную связь.<br>
-            Стрессоустойчивость и адаптивность: сохраняю работоспособность в условиях сжатых сроков и быстро осваиваю новые инструменты.<br>
-            Высокая обучаемость: активно самостоятельно изучаю технологии и методики, применяя их в практике.<br><br>
-            <strong>Профессиональные навыки</strong><br>
-            Языки и технологии: Python, SQL (базы данных), Flask (бэкенд-разработка), HTML/CSS/JavaScript (фронтенд).<br>
-            Инструменты и платформы: Git / GitHub (ведение репозиториев, контроль версий, командная разработка).<br>
-            Специализированные API: опыт работы с Canvas API для реализации графики и анимации в браузере.</p>
-            <p><a href="about.html">Подробнее →</a></p>
-        </div>
-    </div>
-</div>
-
-    <!-- Блок "Мои проекты" -->
-    <div class="card smooth-fade cascade-delay-2">
-        <div class="projects-section">
-            <h2><span class="typewriter">Мои проекты</span></h2>
-            <div class="projects-content">
-                <div class="project-item">
-                    <h3>Змейка Styssie Game</h3>
-                    <p>Классическая змейка с квестами, скинами и таблицей лидеров</p>
-                    <a href="./snake-game">Играть в змейку</a>
+                <!-- Блок "Обо мне" — занимает всю высоту -->
+                <div class="card smooth-fade cascade-delay-1" style="grid-row: span 2;">
+                    <div class="about-section">
+                        <h2><span class="typewriter">Обо мне</span></h2>
+                        <div class="about-content">
+                            <div class="about-text">
+                                <p><strong>Опыт работы</strong><br>
+                                На данный момент совмещаю обучение в университете с интенсивной проектной практикой. В рамках разработки полноценного приложения создал с нуля аркадную игру «Snake», реализовав весь цикл — от проектирования и написания кода до тестирования и релиза. Этот опыт позволил углубить понимание принципов объектно-ориентированного программирования, логики игровых механик и управления проектом.<br><br>
+                                <strong>Личные качества</strong><br>
+                                Ответственность и нацеленность на результат: способен доводить задачи до завершения в установленные сроки.<br>
+                                Коммуникабельность и командная работа: готов к конструктивному диалогу, умею ясно доносить идеи и учитывать обратную связь.<br>
+                                Стрессоустойчивость и адаптивность: сохраняю работоспособность в условиях сжатых сроков и быстро осваиваю новые инструменты.<br>
+                                Высокая обучаемость: активно самостоятельно изучаю технологии и методики, применяя их в практике.<br><br>
+                                <strong>Профессиональные навыки</strong><br>
+                                Языки и технологии: Python, SQL (базы данных), Flask (бэкенд-разработка), HTML/CSS/JavaScript (фронтенд).<br>
+                                Инструменты и платформы: Git / GitHub (ведение репозиториев, контроль версий, командная разработка).<br>
+                                Специализированные API: опыт работы с Canvas API для реализации графики и анимации в браузере.</p>
+                                <p><a href="about.html">Подробнее →</a></p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="project-item">
-                    <h3>PWA Приложение</h3>
-                    <p>Мобильная версия змейки</p>
-                    <a href="#">Смотреть</a>
+
+                <!-- Блок "Мои проекты" -->
+                <div class="card smooth-fade cascade-delay-2">
+                    <div class="projects-section">
+                        <h2><span class="typewriter">Мои проекты</span></h2>
+                        <div class="projects-content">
+                            <div class="project-item">
+                                <h3>Змейка Styssie Game</h3>
+                                <p>Классическая змейка с квестами, скинами и таблицей лидеров</p>
+                                <a href="./snake-game">Играть в змейку</a>
+                            </div>
+                            <div class="project-item">
+                                <h3>PWA Приложение</h3>
+                                <p>Мобильная версия змейки</p>
+                                <a href="#">Смотреть</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-    </div>
 
-    <!-- Блок "Контакты" -->
-    <div class="card smooth-fade cascade-delay-3">
-        <div class="contacts-section">
-            <h2><span class="typewriter">Контакты</span></h2>
-            <div class="contacts-content">
-                <p>Email: alexandr.1742005@gmail.com</p>
-                <p>Telegram: <a href="https://t.me/styssie">@styssie</a></p>
-                <p>GitHub: <a href="https://github.com/alexandr1742005-ai" target="_blank">alexandr1742005-ai</a></p>
-            </div>
-        </div>
-    </div>
+                <!-- Блок "Контакты" -->
+                <div class="card smooth-fade cascade-delay-3">
+                    <div class="contacts-section">
+                        <h2><span class="typewriter">Контакты</span></h2>
+                        <div class="contacts-content">
+                            <p>Email: alexandr.1742005@gmail.com</p>
+                            <p>Telegram: <a href="https://t.me/styssie">@styssie</a></p>
+                            <p>GitHub: <a href="https://github.com/alexandr1742005-ai" target="_blank">alexandr1742005-ai</a></p>
+                        </div>
+                    </div>
+                </div>
 
-    <!-- Блок "Навыки" -->
-    <div class="card smooth-fade cascade-delay-4">
-        <h2>Мои навыки</h2>
-        <ul>
-            <li>Python</li>
-            <li>SQL</li>
-            <li>Flask</li>
-            <li>HTML/CSS</li>
-            <li>JavaScript</li>
-            <li>Git / GitHub</li>
-            <li>Canvas API</li>
-        </ul>
-    </div>
+                <!-- Блок "Навыки" -->
+                <div class="card smooth-fade cascade-delay-4">
+                    <h2>Мои навыки</h2>
+                    <ul>
+                        <li>Python</li>
+                        <li>SQL</li>
+                        <li>Flask</li>
+                        <li>HTML/CSS</li>
+                        <li>JavaScript</li>
+                        <li>Git / GitHub</li>
+                        <li>Canvas API</li>
+                    </ul>
+                </div>
 
-    <!-- Блок "Опыт" -->
-    <div class="card smooth-fade cascade-delay-5">
-        <h2>Опыт</h2>
-        <p>Создание игр, веб-приложений, работа с базами данных, проектная практика в университете.</p>
-    </div>
-</div>
-
-                <!-- Карточка "Статистика" -->
-                <div class="card smooth-fade cascade-delay-6">
-                    <h2>Статистика</h2>
-                    <p>GitHub: 50+ коммитов</p>
-                    <p>Проекты: 5+</p>
-                    <p>Языки: Python, SQL, JS...</p>
+                <!-- Блок "Опыт" -->
+                <div class="card smooth-fade cascade-delay-5">
+                    <h2>Опыт</h2>
+                    <p>Создание игр, веб-приложений, работа с базами данных, проектная практика в университете.</p>
                 </div>
             </div>
         </section>
@@ -125,6 +118,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
-
