--- a/index.html
+++ b/index.html
@@ -54,29 +54,29 @@
                     </div>
                 </div>
 
-                <!-- Блок "Мои проекты" -->
-                <div class="card slide-in">
-                <div class="projects-section">
-                    <h2><span class="typewriter">Мои проекты</span></h2>
-                    <div class="projects-content">
-                        <div class="project-item">
-                            <h3>Змейка Styssie Game</h3>
-                            <p>Классическая змейка с квестами, скинами и таблицей лидеров</p>
-                            <a href="./snake-game">Играть в змейку</a>
-                        </div>
-                        <div class="project-item">
-                            <h3>PWA Приложение</h3>
-                            <p>Мобильная версия змейки</p>
-                            <a href="#">Смотреть</a>
-                        </div>
-                        <div class="project-item">
-                            <h3>Курсач по Базам Данных</h3>
-                            <p>Разработка базы данных для веб-платформы. PostgreSQL, триггеры, хранимые процедуры.</p>
-                            <a href="https://drive.google.com/file/d/ID_ФАЙЛА/view?usp=sharing" target="_blank">Смотреть курсач</a>
-                        </div>
-                    </div>
-                </div>
+<!-- Блок "Мои проекты" -->
+<div class="card smooth-fade cascade-delay-2">
+    <div class="projects-section">
+        <h2><span class="typewriter">Мои проекты</span></h2>
+        <div class="projects-content">
+            <div class="project-item">
+                <h3>Змейка Styssie Game</h3>
+                <p>Классическая змейка с квестами, скинами и таблицей лидеров</p>
+                <a href="./snake-game">Играть в змейку</a>
             </div>
+            <div class="project-item">
+                <h3>PWA Приложение</h3>
+                <p>Мобильная версия змейки</p>
+                <a href="#">Смотреть</a>
+            </div>
+            <div class="project-item">
+                <h3>Работа с использованием SQL</h3>
+                <p>Разработка базы данных для веб-платформы. PostgreSQL, триггеры, хранимые процедуры.</p>
+                <a href="https://docs.google.com/document/d/1HZj1IVr1gqsJB2Q5z3d-FxUgu9BLhZEp/edit?usp=sharing&ouid=102333938774137555975&rtpof=true&sd=true" target="_blank">Смотреть работу</a>
+            </div>
+        </div>
+    </div>
+</div>
 
                 <!-- Блок "Контакты" -->
                 <div class="card smooth-fade cascade-delay-3">
@@ -120,4 +120,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
