--- a/projects.html
+++ b/projects.html
@@ -33,9 +33,9 @@
                             <a href="#">Смотреть</a>
                         </div>
                         <div class="project-item">
-                            <h3>Курсач по Базам Данных</h3>
+                            <h3>Работа с использованием SQL</h3>
                             <p>Разработка базы данных для веб-платформы. PostgreSQL, триггеры, хранимые процедуры.</p>
-                            <a href="https://drive.google.com/file/d/ID_ФАЙЛА/view?usp=sharing" target="_blank">Смотреть курсач</a>
+                            <a href="https://docs.google.com/document/d/1HZj1IVr1gqsJB2Q5z3d-FxUgu9BLhZEp/edit?usp=sharing&ouid=102333938774137555975&rtpof=true&sd=true" target="_blank">Смотреть работу</a>
                         </div>
                     </div>
                 </div>
@@ -55,3 +55,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
