--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <!-- Правая колонка: изображение -->
         <div class="hero-image">
-            <img src="images/coding.jpg" alt="Кодинг на ноутбуке">
+            <img src="images/coding(first).jpg" alt="Кодинг на ноутбуке">
         </div>
     </section>
 
@@ -120,6 +120,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
