--- a/index.html
+++ b/index.html
@@ -34,25 +34,22 @@
         <section class="container">
             <!-- Сетка 2x2 -->
             <div class="main-grid">
-                <!-- Блок "Обо мне" — занимает всю высоту -->
-                <div class="card smooth-fade cascade-delay-1" style="grid-row: span 2;">
-                    <div class="about-section">
-                        <h2><span class="typewriter">Обо мне</span></h2>
-                        <div class="about-content">
-                            <div class="about-text">
-                                <p>На данный момент совмещаю обучение в университете с интенсивной проектной практикой. В рамках разработки полноценного приложения создал с нуля аркадную игру «Snake», реализовав весь цикл — от проектирования и написания кода до тестирования и релиза. Этот опыт позволил углубить понимание принципов объектно-ориентированного программирования, логики игровых механик и управления проектом.<br><br>
-                                Ответственность и нацеленность на результат: способен доводить задачи до завершения в установленные сроки.<br>
-                                Коммуникабельность и командная работа: готов к конструктивному диалогу, умею ясно доносить идеи и учитывать обратную связь.<br>
-                                Стрессоустойчивость и адаптивность: сохраняю работоспособность в условиях сжатых сроков и быстро осваиваю новые инструменты.<br>
-                                Высокая обучаемость: активно самостоятельно изучаю технологии и методики, применяя их в практике.<br><br>
-                                Языки и технологии: Python, SQL (базы данных), Flask (бэкенд-разработка), HTML/CSS/JavaScript (фронтенд).<br>
-                                Инструменты и платформы: Git / GitHub (ведение репозиториев, контроль версий, командная разработка).<br>
-                                Специализированные API: опыт работы с Canvas API для реализации графики и анимации в браузере.</p>
-                                <p><a href="about.html">Подробнее →</a></p>
-                            </div>
-                        </div>
-                    </div>
+              <!-- Блок "Обо мне" — занимает всю высоту -->
+<div class="card smooth-fade cascade-delay-1" style="grid-row: span 2;">
+    <div class="about-section">
+        <h2><span class="typewriter">Обо мне</span></h2>
+        <div class="about-content">
+            <div class="about-text">
+                <p>На данный момент совмещаю обучение в университете с интенсивной проектной практикой. В рамках разработки полноценного приложения создал с нуля аркадную игру «Snake», реализовав весь цикл — от проектирования и написания кода до тестирования и релиза. Этот опыт позволил углубить понимание принципов объектно-ориентированного программирования, логики игровых механик и управления проектом.</p>
+                <p><a href="about.html">Подробнее →</a></p>
+                <!-- Картинка -->
+                <div class="about-image">
+                    <img src="images/coding.jpg" alt="Кодинг на ноутбуке" style="width: 100%; max-width: 300px; border-radius: 10px; margin-top: 1rem;">
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- Блок "Мои проекты" -->
 <div class="card smooth-fade cascade-delay-2">
@@ -120,6 +117,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
