--- a/snake-game/index.html
+++ b/snake-game/index.html
@@ -413,49 +413,49 @@
             ctx.fillRect(centerX - 2, food.y * gridSize, 4, 6);
         }
 
-        function moveSnake() {
-            if (!gameActive) return;
+      function moveSnake() {
+    if (!gameActive) return;
 
-            const head = {x: snake[0].x + dx, y: snake[0].y + dy};
+    let head = {x: snake[0].x + dx, y: snake[0].y + dy};
 
-            // Проверка столкновения со стеной
-            if (head.x < 0 || head.x >= tileCount || head.y < 0 || head.y >= tileCount) {
-                gameOver();
-                return;
-            }
+    // Прохождение сквозь стены
+    if (head.x < 0) head.x = tileCount - 1;           // Слева → справа
+    else if (head.x >= tileCount) head.x = 0;         // Справа → слева
+    if (head.y < 0) head.y = tileCount - 1;          // Сверху → снизу
+    else if (head.y >= tileCount) head.y = 0;        // Снизу → сверху
 
-            // Проверка столкновения с собой
-            for (let i = 1; i < snake.length; i++) {
-                if (snake[i].x === head.x && snake[i].y === head.y) {
-                    gameOver();
-                    return;
-                }
-            }
+    // Проверка столкновения с собой (после прохождения через стену)
+    for (let i = 0; i < snake.length; i++) {
+        if (snake[i].x === head.x && snake[i].y === head.y) {
+            gameOver();
+            return;
+        }
+    }
 
-            snake.unshift(head);
+    snake.unshift(head);
 
-            // Если съели еду
-            if (head.x === food.x && head.y === food.y) {
-                score++;
-                document.getElementById('score').textContent = 'Счёт: ' + score;
+    // Если съели еду
+    if (head.x === food.x && head.y === food.y) {
+        score++;
+        document.getElementById('score').textContent = 'Счёт: ' + score;
 
-                // Проверяем рекорд
-                if (score > bestScore) {
-                    bestScore = score;
-                    document.getElementById('bestScore').textContent = 'Рекорд: ' + bestScore;
-                    saveBestScore();
-                    if (!newRecordShown) {
-                        document.getElementById('newRecord').style.display = 'block';
-                        newRecordShown = true;
-                    }
-                }
-
-                // Создаём новую еду
-                generateFood();
-            } else {
-                snake.pop();
+        // Проверяем рекорд
+        if (score > bestScore) {
+            bestScore = score;
+            document.getElementById('bestScore').textContent = 'Рекорд: ' + bestScore;
+            saveBestScore();
+            if (!newRecordShown) {
+                document.getElementById('newRecord').style.display = 'block';
+                newRecordShown = true;
             }
         }
+
+        // Создаём новую еду
+        generateFood();
+    } else {
+        snake.pop();
+    }
+}
 
         function gameLoop(currentTime) {
             window.requestAnimationFrame(gameLoop);
@@ -578,3 +578,4 @@
     </script>
 </body>
 </html>
+
