--- a/snake-game/index.html
+++ b/snake-game/index.html
@@ -416,52 +416,51 @@
         }
 
         function moveSnake() {
-            if (!gameActive) return;
+    if (!gameActive) return;
 
-            let head = {x: snake[0].x + dx, y: snake[0].y + dy};
+    let head = {x: snake[0].x + dx, y: snake[0].y + dy};
 
-            // Прохождение сквозь стены
-            if (head.x < 0) head.x = tileCount - 1;           // Слева → справа
-            else if (head.x >= tileCount) head.x = 0;         // Справа → слева
-            if (head.y < 0) head.y = tileCount - 1;          // Сверху → снизу
-            else if (head.y >= tileCount) head.y = 0;        // Снизу → сверху
+    // Прохождение сквозь стены
+    if (head.x < 0) head.x = tileCount - 1;           // Слева → справа
+    else if (head.x >= tileCount) head.x = 0;         // Справа → слева
+    if (head.y < 0) head.y = tileCount - 1;          // Сверху → снизу
+    else if (head.y >= tileCount) head.y = 0;        // Снизу → сверху
 
-            // Проверка столкновения с собой (после прохождения через стену)
-            for (let i = 0; i < snake.length; i++) {
-                if (snake[i].x === head.x && snake[i].y === head.y) {
-                    gameOver();
-                    return;
-                }
-            }
+    // Проверка столкновения с собой (после прохождения через стену)
+    for (let i = 0; i < snake.length; i++) {
+        if (snake[i].x === head.x && snake[i].y === head.y) {
+            gameOver();
+            return;
+        }
+    }
 
-            snake.unshift(head);
+    snake.unshift(head);
 
-            // Если съели еду
-            if (head.x === food.x && head.y === food.y) {
-                score++;
-                document.getElementById('score').textContent = 'Счёт: ' + score;
+    // Проверяем, съела ли змейка яблоко
+    if (head.x === food.x && head.y === food.y) {
+        // Увеличиваем счёт
+        score++;
+        document.getElementById('score').textContent = 'Счёт: ' + score;
 
-                // Проверяем рекорд
-                if (score > bestScore) {
-                    bestScore = score;
-                    document.getElementById('bestScore').textContent = 'Рекорд: ' + bestScore;
-                    saveBestScore();
-                    if (!newRecordShown) {
-                        document.getElementById('newRecord').style.display = 'block';
-                        newRecordShown = true;
-                    }
-
-                    // Создаём новую еду
-                    generateFood();
-                    // Не удаляем хвост, если съели еду
-                } else {
-                    snake.pop(); // Удаляем хвост, если не съели еду
-                }
-            } else {
-                snake.pop(); // Удаляем хвост, если не съели еду
+        // Проверяем рекорд
+        if (score > bestScore) {
+            bestScore = score;
+            document.getElementById('bestScore').textContent = 'Рекорд: ' + bestScore;
+            saveBestScore();
+            if (!newRecordShown) {
+                document.getElementById('newRecord').style.display = 'block';
+                newRecordShown = true;
             }
         }
 
+        // Создаём новое яблоко
+        generateFood();
+        // Не удаляем хвост (змейка растёт)
+    } else {
+        // Удаляем хвост (змейка не растёт)
+        snake.pop();
+    }
+}
         function gameLoop(currentTime) {
             window.requestAnimationFrame(gameLoop);
 
@@ -584,3 +583,4 @@
     </script>
 </body>
 </html>
+
