--- a/snake-game/index.html
+++ b/snake-game/index.html
@@ -223,16 +223,14 @@
             snake = [
                 {x: 10, y: 10}
             ];
-            // Генерируем еду только если игра активна
-            if (gameActive) {
-                generateFood();
-            }
+            generateFood();
             dx = 0;
             dy = 0;
             score = 0;
             newRecordShown = false;
             document.getElementById('score').textContent = 'Счёт: 0';
             document.getElementById('newRecord').style.display = 'none';
+            gameActive = true;
         }
 
         // Генерируем еду в свободной клетке
@@ -415,52 +413,50 @@
             ctx.fillRect(centerX - 2, food.y * gridSize, 4, 6);
         }
 
-      function moveSnake() {
-    if (!gameActive) return;
+        function moveSnake() {
+            if (!gameActive) return;
 
-    let head = {x: snake[0].x + dx, y: snake[0].y + dy};
+            const head = {x: snake[0].x + dx, y: snake[0].y + dy};
 
-    // Прохождение сквозь стены
-    if (head.x < 0) head.x = tileCount - 1;           // Слева → справа
-    else if (head.x >= tileCount) head.x = 0;         // Справа → слева
-    if (head.y < 0) head.y = tileCount - 1;          // Сверху → снизу
-    else if (head.y >= tileCount) head.y = 0;        // Снизу → сверху
+            // Проверка столкновения со стеной
+            if (head.x < 0 || head.x >= tileCount || head.y < 0 || head.y >= tileCount) {
+                gameOver();
+                return;
+            }
 
-    // Проверка столкновения с собой (после прохождения через стену)
-    for (let i = 0; i < snake.length; i++) {
-        if (snake[i].x === head.x && snake[i].y === head.y) {
-            gameOver();
-            return;
-        }
-    }
+            // Проверка столкновения с собой
+            for (let i = 1; i < snake.length; i++) {
+                if (snake[i].x === head.x && snake[i].y === head.y) {
+                    gameOver();
+                    return;
+                }
+            }
 
-    snake.unshift(head);
+            snake.unshift(head);
 
-    // Проверяем, съела ли змейка яблоко
-    if (head.x === food.x && head.y === food.y) {
-        // Увеличиваем счёт
-        score++;
-        document.getElementById('score').textContent = 'Счёт: ' + score;
+            // Если съели еду
+            if (head.x === food.x && head.y === food.y) {
+                score++;
+                document.getElementById('score').textContent = 'Счёт: ' + score;
 
-        // Проверяем рекорд
-        if (score > bestScore) {
-            bestScore = score;
-            document.getElementById('bestScore').textContent = 'Рекорд: ' + bestScore;
-            saveBestScore();
-            if (!newRecordShown) {
-                document.getElementById('newRecord').style.display = 'block';
-                newRecordShown = true;
+                // Проверяем рекорд
+                if (score > bestScore) {
+                    bestScore = score;
+                    document.getElementById('bestScore').textContent = 'Рекорд: ' + bestScore;
+                    saveBestScore();
+                    if (!newRecordShown) {
+                        document.getElementById('newRecord').style.display = 'block';
+                        newRecordShown = true;
+                    }
+                }
+
+                // Создаём новую еду
+                generateFood();
+            } else {
+                snake.pop();
             }
         }
 
-        // Создаём новое яблоко
-        generateFood();
-        // Не удаляем хвост (змейка растёт)
-    } else {
-        // Удаляем хвост (змейка не растёт)
-        snake.pop();
-    }
-}
         function gameLoop(currentTime) {
             window.requestAnimationFrame(gameLoop);
 
@@ -482,9 +478,8 @@
         function gameOver() {
             gameActive = false;
             setTimeout(() => {
-                resetGame(); // Сразу сброс игры
-                gameActive = true; // Возобновляем игру
-                window.requestAnimationFrame(gameLoop); // Запускаем цикл снова
+                alert('Игра окончена! Счёт: ' + score);
+                resetGame();
             }, 100);
         }
 
@@ -583,5 +578,3 @@
     </script>
 </body>
 </html>
-
-
