--- a/projects.html
+++ b/projects.html
@@ -36,8 +36,7 @@
                             <h3>Работа с использованием SQL</h3>
                             <p>Разработка базы данных для веб-платформы. PostgreSQL, триггеры, хранимые процедуры.</p>
                             <a href="https://docs.google.com/document/d/1HZj1IVr1gqsJB2Q5z3d-FxUgu9BLhZEp/edit?usp=sharing&ouid=102333938774137555975&rtpof=true&sd=true" target="_blank">Смотреть работу</a>
-                        <h3>Робота с использованием SQL(код программы в PostgreSQL) </h3>
-    <p>Разработка базы данных для веб-платформы. PostgreSQL, триггеры, хранимые процедуры.</p>
+                        <h3>Код программы в PostgreSQL</h3>
     <a href="https://docs.google.com/document/d/1Olp-FTLGmM0bzwp30HtRQWvTwkKLshNe/edit?usp=sharing&ouid=102333938774137555975&rtpof=true&sd=true" target="_blank">Смотреть код</a>
                           </div>
                         </div>
@@ -59,5 +58,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
